[metadata]
name = ssa3021xnoisegui-tspspi
version = 0.0.1
author = Thomas Spielauer
author_email = pypipackages01@tspi.at
description = GUI frontend for realtime noise measurements using SSG3021X
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tspspi/ssa3021xnoisegui
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib >= 3.3.4
    FreeSimpleGUI >= 5.1.0
    numpy >= 1.20.0
    pylabdevs-tspspi >= 0.0.17
    pyssa3021x-tspspi >= 0.0.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ssa3021xnoisegui = ssa3021xnoisegui.ssa3021xnoisegui:main
